--- a/hpc/miniprofiler/English/profiling_start.ipynb
+++ b/hpc/miniprofiler/English/profiling_start.ipynb
@@ -28,13 +28,13 @@
     "    - Overview of [Mini Weather application](C/jupyter_notebook/miniweather.ipynb)\n",
     "    - Optimization Steps to parallel programming with OpneACC\n",
     "- Lab 1 ([C](C/jupyter_notebook/profiling-c-lab1.ipynb) , [Fortran](Fortran/jupyter_notebook/profiling-fortran-lab1.ipynb))\n",
-    "    - How to compile a serial application with PGI compiler\n",
+    "    - How to compile a serial application with NVIDIA HPC compiler\n",
     "    - How to profile a serial application with Nsight Systems and NVTX APIs\n",
     "    - How to use profiler's report to find hotspots\n",
     "    - Scaling and Amdahl's law and why it matters\n",
     "- Lab 2 ([C](C/jupyter_notebook/profiling-c-lab2.ipynb) , [Fortran](Fortran/jupyter_notebook/profiling-fortran-lab2.ipynb))\n",
     "    - Parallelise the serial application using OpenACC compute directives\n",
-    "    - How to compile a parallel application with PGI compiler\n",
+    "    - How to compile a parallel application with NVIDIA HPC compiler\n",
     "    - What does the compiler feedback tell us\n",
     "    - Profile with Nsight Systems\n",
     "    - Finding bottlenecks from Nsight Systems report\n",
@@ -93,9 +93,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
