--- a/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab1.ipynb
+++ b/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab1.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "Let's execute the cell below to display information about the GPUs running on the server by running the `pgaccelinfo` command, which ships with the PGI compiler that we will be using. To do this, execute the cell block below by giving it focus (clicking on it with your mouse), and hitting Ctrl-Enter, or pressing the play button in the toolbar above.  If all goes well, you should see some output returned below the grey cell."
+    "Let's execute the cell below to display information about the GPUs running on the server by running the `nvaccelinfo` command, which ships with the NVIDIA HPC compiler that we will be using. To do this, execute the cell block below by giving it focus (clicking on it with your mouse), and hitting Ctrl-Enter, or pressing the play button in the toolbar above.  If all goes well, you should see some output returned below the grey cell."
    ]
   },
   {
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pgaccelinfo"
+    "!nvaccelinfo"
    ]
   },
   {
@@ -74,10 +74,10 @@
     "Preemption Supported:          Yes\n",
     "Cooperative Launch:            Yes\n",
     "  Multi-Device:                Yes\n",
-    "PGI Default Target:            -ta=tesla:cc70\n",
+    "Default Target:            -ta=tesla:cc70\n",
     "```\n",
     "\n",
-    "This gives us lots of details about the GPU, for instance the device number, the type of device, and at the very bottom the command line argument we should use when targeting this GPU (see *_PGI Compiler Option_*). We will use this command line option a bit later to build for our GPU."
+    "This gives us lots of details about the GPU, for instance the device number, the type of device, and at the very bottom the command line argument we should use when targeting this GPU (see *_NVIDIA HPC Compiler Option_*). We will use this command line option a bit later to build for our GPU."
    ]
   },
   {
@@ -97,7 +97,7 @@
     "\n",
     "**Optimize** your code to improve observed speed-up from parallelization.\n",
     "\n",
-    "One should generally start the process at the top with the **analyze** step. For complex applications, it's useful to have a profiling tool available to learn where your application is spending its execution time and to focus your efforts there. The PGI compiler ships with a profiler called PGProf. Since our example code is quite a bit simpler than a full application, we'll skip profiling the code and simply analyze the code by reading it. "
+    "One should generally start the process at the top with the **analyze** step. For complex applications, it's useful to have a profiling tool available to learn where your application is spending its execution time and to focus your efforts there. The NVIDIA HPC Software Development Kit (SDK) comes with NVIDIA Nsight Systems/Compute for interactive HPC applications performance profiler. Since our example code is quite a bit simpler than a full application, we'll skip profiling the code and simply analyze the code by reading it. "
    ]
   },
   {
@@ -215,13 +215,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compiling the Code with PGI\n",
+    "### Compiling the Code with NVIDIA HPC\n",
     "\n",
-    "For this lab we are using the PGI compiler to compiler our code. You will not need to memorize the compiler commands to complete this lab, however, they will be helpful to know if you want to parallelize your own personal code with OpenACC.\n",
+    "For this lab we are using the NVIDIA HPC compiler to compiler our code. You will not need to memorize the compiler commands to complete this lab, however, they will be helpful to know if you want to parallelize your own personal code with OpenACC.\n",
     "\n",
-    "**pgcc**      : this is the command to compile C code  \n",
-    "**pgc++**     : this is the command to compile C++ code  \n",
-    "**pgfortran** : this is the command to compile Fortran code  \n",
+    "**nvc**      : this is the command to compile C code  \n",
+    "**nvc++**     : this is the command to compile C++ code  \n",
+    "**nvfortran** : this is the command to compile Fortran code  \n",
     "**-fast**     : this compiler flag instructs the compiler to use what it believes are the best possible optimizations for our system"
    ]
   },
@@ -287,7 +287,7 @@
     "\n",
     "**#pragma** in C/C++ is what's known as a \"compiler hint.\" These are very similar to programmer comments, however, the compiler will actually read our pragmas. Pragmas are a way for the programmer to \"guide\" the compiler above and beyond what the programming languages allow. If the compiler does not understand the pragma, it can ignore it, rather than throw a syntax error.\n",
     "\n",
-    "**acc** is an addition to our pragma. It specifies that this is an **OpenACC pragma**. Any non-OpenACC compiler will ignore this pragma. Even our PGI compiler can be told to ignore them. (which lets us run our parallel code sequentially!)\n",
+    "**acc** is an addition to our pragma. It specifies that this is an **OpenACC pragma**. Any non-OpenACC compiler will ignore this pragma. Even our NVIDIA HPC compiler can be told to ignore them. (which lets us run our parallel code sequentially!)\n",
     "\n",
     "**directives** are commands in OpenACC that will tell the compiler to do some action. For now, we will only use directives that allow the compiler to parallelize our code.\n",
     "\n",
@@ -540,9 +540,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
