--- a/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab2.ipynb
+++ b/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab2.ipynb
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "!pgaccelinfo"
+    "!nvaccelinfo"
    ]
   },
   {
@@ -122,7 +122,7 @@
     "```\n",
     "jacobi.c:\n",
     "laplace2d.c:\n",
-    "PGC-S-0155-Compiler failed to translate accelerator region (see -Minfo messages): Could not find allocated-variable index for symbol (laplace2d.c: 47)\n",
+    "NVC++-S-0155-Compiler failed to translate accelerator region (see -Minfo messages): Could not find allocated-variable index for symbol (laplace2d.c: 47)\n",
     "calcNext:\n",
     "     47, Accelerator kernel generated\n",
     "         Generating Tesla code\n",
@@ -131,13 +131,13 @@
     "         54, Generating implicit reduction(max:error)\n",
     "     48, Accelerator restriction: size of the GPU copy of Anew,A is unknown\n",
     "     50, Loop is parallelizable\n",
-    "PGC-F-0704-Compilation aborted due to previous errors. (laplace2d.c)\n",
-    "PGC/x86-64 Linux 18.7-0: compilation aborted\n",
+    "NVC++-F-0704-Compilation aborted due to previous errors. (laplace2d.c)\n",
+    "NVC++/x86-64 Linux 18.7-0: compilation aborted\n",
     "```\n",
     "\n",
     "This error message is not very intuitive, so let me explain it to you.:\n",
     "\n",
-    "* `PGC-S-0155-Compiler failed to translate accelerator region (see -Minfo messages): Could not find allocated-variable index for symbol (laplace2d.c: 47)` - The compiler doesn't like something about a variable from line 47 of our code.\n",
+    "* `NVC++-S-0155-Compiler failed to translate accelerator region (see -Minfo messages): Could not find allocated-variable index for symbol (laplace2d.c: 47)` - The compiler doesn't like something about a variable from line 47 of our code.\n",
     "* `48, Accelerator restriction: size of the GPU copy of Anew,A is unknown` - I don't see any further information about line 47, but at line 48 the compiler is struggling to understand the size and shape of the arrays Anew and A. It turns out, this is our problem.\n",
     "\n",
     "So, what these cryptic compiler errors are telling us is that the compiler needs to create copies of A and Anew on the GPU in order to run our code there, but it doesn't know how big they are, so it's giving up. We would need to give the compiler more information about these arrays before it can move forward in C/C++. In Fortran the compiler can help us out, but the goal here is to explicitly manage your data, so let's find out how to do that."
@@ -298,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Well, the good news is that it should have built correctly and run. If it didn't, check your data clauses carefully. The bad news is that now it runs a whole lot slower than it did in the last exercise. Let's try to figure out why. The PGI compiler provides your executable with built-in timers, so let's start by enabling them and seeing what it shows. You can enable these timers by setting the environment variable `PGI_ACC_TIME=1`. Run the cell below to get the program output with the built-in profiler enabled. \n",
+    "Well, the good news is that it should have built correctly and run. If it didn't, check your data clauses carefully. The bad news is that now it runs a whole lot slower than it did in the last exercise. Let's try to figure out why. The NVIDIA HPC compiler provides your executable with built-in timers, so let's start by enabling them and seeing what it shows. You can enable these timers by setting the environment variable `PGI_ACC_TIME=1`. Run the cell below to get the program output with the built-in profiler enabled. \n",
     "\n",
     "**Note:** Profiling will not be covered in this lab. Please have a look at the supplementary [slides](https://drive.google.com/file/d/1Asxh0bpntlmYxAPjBxOSThFIz7Ssd48b/view?usp=sharing)."
    ]
@@ -652,9 +652,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
