--- a/hpc/miniprofiler/English/C/jupyter_notebook/profiling-c-lab4.ipynb
+++ b/hpc/miniprofiler/English/C/jupyter_notebook/profiling-c-lab4.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "In this lab, we will optimize the weather simulation application written in C++ (if you prefer to use Fortran, click [this link](../../Fortran/jupyter_notebook/profiling-fortran.ipynb)). \n",
     "\n",
-    "Let's execute the cell below to display information about the GPUs running on the server by running the pgaccelinfo command, which ships with the PGI compiler that we will be using. To do this, execute the cell block below by giving it focus (clicking on it with your mouse), and hitting Ctrl-Enter, or pressing the play button in the toolbar above. If all goes well, you should see some output returned below the grey cell."
+    "Let's execute the cell below to display information about the GPUs running on the server by running the nvaccelinfo command, which ships with the NVIDIA HPC compiler that we will be using. To do this, execute the cell block below by giving it focus (clicking on it with your mouse), and hitting Ctrl-Enter, or pressing the play button in the toolbar above. If all goes well, you should see some output returned below the grey cell."
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pgaccelinfo"
+    "!nvaccelinfo"
    ]
   },
   {
@@ -28,10 +28,10 @@
     "Learn how to improve the performance of the application by managing data movement and reducing the unnecessary data transfers. In this exercise you will:\n",
     "\n",
     "- Learn about unified memory and how to automatically migrate data between CPU and GPU\n",
-    "- Learn how to use it via PGI compiler managed option, and profiling managed memory\n",
+    "- Learn how to use it via NVIDIA HPC compiler managed option, and profiling managed memory\n",
     "- Learn how to identify redundant memory copies via Nsight Systems\n",
     "- Learn how to improve efficiency by reducing extra data copies via OpenACC data directive\n",
-    "- Learn how to use PGI compiler feedback as a guidance on where to insert the OpenACC data directives\n",
+    "- Learn how to use NVIDIA HPC compiler feedback as a guidance on where to insert the OpenACC data directives\n",
     "- Apply data directives to the parallel application, benchmark and profile it\n",
     "\n",
     "Let's inspect the profiler report from previous exercise. From the \"timeline view\" on the top pane, double click on the \"CUDA\" from the function table on the left and expand it. Zoom in on the timeline and you can see a pattern similar to the screenshot below. The blue boxes are the compute kernels and each of these groupings of kernels is surrounded by purple and teal boxes (annotated with red color) representing data movements.\n",
@@ -179,9 +179,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
