--- a/hpc/miniprofiler/English/Fortran/jupyter_notebook/profiling-fortran-lab1.ipynb
+++ b/hpc/miniprofiler/English/Fortran/jupyter_notebook/profiling-fortran-lab1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "In this lab, we will optimize the weather simulation application written in Fortran (if you prefer to use C++, click [this link](../../C/jupyter_notebook/profiling-c.ipynb)). \n",
     "\n",
-    "Let's execute the cell below to display information about the GPUs running on the server by running the pgaccelinfo command, which ships with the PGI compiler that we will be using. To do this, execute the cell block below by giving it focus (clicking on it with your mouse), and hitting Ctrl-Enter, or pressing the play button in the toolbar above. If all goes well, you should see some output returned below the grey cell."
+    "Let's execute the cell below to display information about the GPUs running on the server by running the nvaccelinfo command, which ships with the NVIDIA HPC compiler that we will be using. To do this, execute the cell block below by giving it focus (clicking on it with your mouse), and hitting Ctrl-Enter, or pressing the play button in the toolbar above. If all goes well, you should see some output returned below the grey cell."
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pgaccelinfo"
+    "!nvaccelinfo"
    ]
   },
   {
@@ -27,7 +27,7 @@
     "###  Learning objectives\n",
     "Learn how to assess your serial application, compile, and profile with Nsight systems and find the hotspots. In this exercise you will:\n",
     "\n",
-    "- Learn how to compile your serial application with PGI compiler\n",
+    "- Learn how to compile your serial application with NVIDIA HPC compiler\n",
     "- Learn how to benchmark and profile the serial code using NVIDIA Nsight systems \n",
     "- Learn how to identify routines responsible for the bulk of the execution time via NVTX markers shown on the Nsight System’s timeline\n",
     "- Learn about scaling and Amdahl’s law\n",
@@ -42,7 +42,7 @@
     "\n",
     "Open the downloaded file for inspection.\n",
     "\n",
-    "**Compile** the code with PGI compiler by running `make`. You can get compiler feedback by adding the `-Minfo` flag. Some of the available options are:\n",
+    "**Compile** the code with NVIDIA HPC compiler by running `make`. You can get compiler feedback by adding the `-Minfo` flag. Some of the available options are:\n",
     "\n",
     "- `accel` – Print compiler operations related to the accelerator\n",
     "- `all` – Print all compiler output\n",
@@ -184,9 +184,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
