--- a/hpc/miniprofiler/English/Fortran/jupyter_notebook/profiling-fortran-lab2.ipynb
+++ b/hpc/miniprofiler/English/Fortran/jupyter_notebook/profiling-fortran-lab2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "In this lab, we will optimize the weather simulation application written in Fortran (if you prefer to use C++, click [this link](../../C/jupyter_notebook/profiling-c.ipynb)). \n",
     "\n",
-    "Let's execute the cell below to display information about the GPUs running on the server by running the pgaccelinfo command, which ships with the PGI compiler that we will be using. To do this, execute the cell block below by giving it focus (clicking on it with your mouse), and hitting Ctrl-Enter, or pressing the play button in the toolbar above. If all goes well, you should see some output returned below the grey cell."
+    "Let's execute the cell below to display information about the GPUs running on the server by running the nvaccelinfo command, which ships with the NVIDIA HPC compiler that we will be using. To do this, execute the cell block below by giving it focus (clicking on it with your mouse), and hitting Ctrl-Enter, or pressing the play button in the toolbar above. If all goes well, you should see some output returned below the grey cell."
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pgaccelinfo"
+    "!nvaccelinfo"
    ]
   },
   {
@@ -28,9 +28,9 @@
     "Learn how to identify and parallelise the computationally expensive routines in your application using OpenACC compute constructs (A compute construct is a parallel, kernels, or serial construct.). In this exercise you will:\n",
     "\n",
     "- Implement OpenACC parallelism using parallel directives to parallelise the serial application\n",
-    "- Learn how to compile your parallel application with PGI compiler\n",
+    "- Learn how to compile your parallel application with NVIDIA HPC compiler\n",
     "- Benchmark and compare the parallel version of the application with the serial version\n",
-    "- Learn how to interpret PGI compiler feedback to ensure the applied optimization were successful\n"
+    "- Learn how to interpret NVIDIA HPC compiler feedback to ensure the applied optimization were successful\n"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "source": [
     "Click on the <b>[miniWeather_openacc.f90](../source_code/lab2/miniWeather_openacc.f90)</b> and <b>[Makefile](../source_code/lab2/Makefile)</b> and inspect the code before running below cells. We have already added OpenACC compute directives (`!$acc parallel loop`) around the expensive routines (loops) in the code.\n",
     "\n",
-    "Once done, compile the code with `make`. View the PGI compiler feedback (enabled by adding `-Minfo=accel` flag) and investigate the compiler feedback for the OpenACC code. The compiler feedback provides useful information about applied optimizations."
+    "Once done, compile the code with `make`. View the NVIDIA HPC compiler feedback (enabled by adding `-Minfo=accel` flag) and investigate the compiler feedback for the OpenACC code. The compiler feedback provides useful information about applied optimizations."
    ]
   },
   {
@@ -193,9 +193,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
