--- a/hpc/openacc/English/Lab1.ipynb
+++ b/hpc/openacc/English/Lab1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# OpenACC Online Course - Lab 1\n",
     "\n",
-    "Welcome to the first lab of the OpenACC Online Course. In this lab you     will learn to compile a simple, serial application with the PGI compiler     and parallelize that code for multicore CPUs and NVIDIA GPUs using OpenACC. The lab uses a Jupyter notebook, like this one, and the PGI Compiler. If you are not familiar with Jupyter, you may execute the commands in a cell by pressing ctrl-enter or pressing the \"Run\" button at the top of the page. This lab is available in C or Fortran, please choose the version that best fits your needs below.\n",
+    "Welcome to the first lab of the OpenACC Online Course. In this lab you will learn to compile a simple, serial application with the NVIDIA HPC compiler     and parallelize that code for multicore CPUs and NVIDIA GPUs using OpenACC. The lab uses a Jupyter notebook, like this one, and the PGI Compiler. If you are not familiar with Jupyter, you may execute the commands in a cell by pressing ctrl-enter or pressing the \"Run\" button at the top of the page. This lab is available in C or Fortran, please choose the version that best fits your needs below.\n",
     "\n",
     "* [C/C++ Version](C/jupyter_notebook/openacc_c_lab1.ipynb)\n",
     "* [Fortran Version](Fortran/jupyter_notebook/openacc_fortran_lab1.ipynb)"
@@ -29,9 +29,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
